--- a/src/style.css
+++ b/src/style.css
@@ -296,6 +296,14 @@ html, body {
   position: relative;
   display: block;
   overflow: hidden;
+  height: 210px;
+}
+
+.pub-img-wrap .pub-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 .pub-img {
